--- a/theme_definition/pubspec.yaml
+++ b/theme_definition/pubspec.yaml
@@ -7,6 +7,12 @@ environment:
   sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
+  localization_builder: ^0.9.7
+  yaml: ^3.0.0
+  recase: ^4.0.0-nullsafety.0
+  equatable: ^2.0.0-nullsafety.3
+
+dependency_overrides:
   yaml: ^3.0.0
   recase: ^4.0.0-nullsafety.0
   equatable: ^2.0.0-nullsafety.3
