--- a/theme_definition_editor/pubspec.yaml
+++ b/theme_definition_editor/pubspec.yaml
@@ -1,33 +1,19 @@
 name: theme_definition_editor
 description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  provider:
-  tap_builder: 0.2.0-beta
+  provider: ^5.0.0-nullsafety.5
+  tap_builder: ^0.2.0
   sembast: ^2.4.10+1
   sembast_web: ^1.2.0+1
   equatable: ^2.0.0-nullsafety.3
-  google_fonts: ^1.1.2
-  path_icon: ^0.6.4
+  google_fonts: ^2.0.0
+  path_icon: ^0.7.0
   theme_definition:
     path: ../theme_definition
   flutter:
@@ -41,6 +27,9 @@ dependencies:
 dependency_overrides:
   meta: ^1.3.0-nullsafety.6
   collection: ^1.15.0-nullsafety.5
+  yaml: ^3.0.0
+  recase: ^4.0.0-nullsafety.0
+  equatable: ^2.0.0-nullsafety.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
