--- a/theme_definition/pubspec.yaml
+++ b/theme_definition/pubspec.yaml
@@ -4,13 +4,14 @@ description: A starting point for Dart libraries or applications.
 # homepage: https://www.example.com
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  localization_builder: ^0.9.7
+  #dart_style: ^1.3.14
+  localization_builder: ^0.11.8 
   yaml: ^3.0.0
   recase: ^4.0.0-nullsafety.0
-  equatable: ^2.0.0-nullsafety.3
+  equatable: ^2.0.0
 
 dependency_overrides:
   yaml: ^3.0.0
